# depreview

./: README.md  pyproject.toml
.github/workflows/: test.yml
depreview/: crypto.py  database.py  decision.py  parse.py
depreview/crawl/: base.py  node_npm.py  python_pypi.py
depreview/registries/: __init__.py  base.py  node_npm.py  python_pypi.py
depreview/web/: __init__.py
depreview/web/templates/: base.html  index.html  list.html  list_invalid.html  list_notfound.html  list_tree.html  package.html  package_notfound.html
tests/: test_parse.py
