[tool.poetry]
name = "depreview"
version = "0.1.0"
description = ""
authors = ["Remi Rampin <remi@rampin.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = ">=1.4.41,<1.5"
aiohttp = ">=3.8.3,<4"
quart = ">=0.18.1,<0.19"
Markdown = ">=3.4.1,<4"
packaging = "*"
docutils = "*"
bleach = "*"
tomli = ">=2.0.1,<3"
cryptography = "*"

[tool.poetry.plugins."depreview.registries"]
pypi = "depreview.registries.python_pypi:PythonPyPI"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
